--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
+body {
+  background-color: #292524;
+  color: #fafaf9;
+}
+
+.fact-form {
+  background-color: #44403c;
+}
+
 h1 {
   font-size: 42px;
   text-transform: uppercase;
   text-align: center;
   font-family: "Coiny", sans-serif;
+  color: #;
 }
 
 .fact {
   font-size: 20px;
   line-height: 1.4;
   font-family: "Sono", sans-serif;
+  background-color: #44403c;
 }
 
 .tag {
