--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ body {
 
 .header {
   margin: 40px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-item: center;
+  gap: 16px;
 }
 
 .fact-form {
@@ -26,6 +36,7 @@ h1 {
   font-size: 42px;
   text-transform: uppercase;
   font-family: "Coiny", sans-serif;
+  margin-top: 6px;
 }
 
 .fact {
