--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ h1 {
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
+  letter-spacing: -1px;
+
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 .tag {
@@ -55,6 +60,10 @@ h1 {
   padding-left: 10px;
   padding-right: 10px;
   display: inline-block;
+}
+
+.vote-buttons {
+  margin-left: auto;
 }
 
 ul {
