--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   padding: 40px;
 }
 
+/* LAYOUT */
 .header {
   margin: 40px;
   display: flex;
@@ -19,6 +20,13 @@ body {
   justify-content: space-between;
 }
 
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/* ELEMENTS */
 .logo {
   display: flex;
   align-item: center;
