--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ h1 {
   padding-left: 10px;
   padding-right: 10px;
   display: inline-block;
+  border-radius: 100px;
+  cursor: pointer;
 }
 
 .vote-buttons {
@@ -109,11 +111,13 @@ ul {
   border: none;
   font-family: "Coiny", sans-serif;
   line-height: 1;
-  tex-transform: uppercase;
+  text-transform: uppercase;
   font-size: 17px;
   padding: 13px 0 16px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
   color: inherit;
+  border-radius: 100px;
+  cursor: pointer;
   transition: all 0.3s;
 }
 
