--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 /* ELEMENTS */
 .logo {
   display: flex;
-  align-item: center;
+  align-items: center;
   gap: 16px;
 }
 
@@ -54,7 +54,7 @@ h1 {
   font-size: 42px;
   text-transform: uppercase;
   font-family: "Coiny", sans-serif;
-  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .category {
@@ -78,7 +78,7 @@ h1 {
   text-transform: uppercase;
   font-size: 14px;
   font-family: "Coiny", sans-serif;
-  padding-top: 3px;
+  padding-bottom: 3px;
   padding-left: 10px;
   padding-right: 10px;
   display: inline-block;
@@ -88,6 +88,26 @@ h1 {
 
 .vote-buttons {
   margin-left: auto;
+  display: flex;
+  gap: 8px;
+  flex-shrink: 0;
+}
+
+.vote-buttons button {
+  border: none;
+  background-color: #78716c;
+  font-size: 18px;
+  padding: 6px 12px;
+  border-radius: 100px;
+  color: inherit;
+  font-family: inherit;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.vote-buttons button:hover {
+  background-color: #292524;
 }
 
 ul {
