--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* MAIN LAYOUT */
 .container {
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
 }
 
@@ -31,6 +31,12 @@ body {
   gap: 48px;
 }
 
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+}
+
 /* ELEMENTS */
 .logo {
   display: flex;
@@ -41,16 +47,6 @@ body {
 .logo img {
   width: 68px;
   height: 68px;
-}
-
-.fact-form {
-  background-color: #44403c;
-  margin-bottom: 40px;
-  padding: 16px 32px;
-  display: flex;
-  align-items: center;
-  gap: 18px;
-  border-radius: 16px;
 }
 
 h1 {
@@ -76,6 +72,14 @@ h1 {
   align-items: center;
   gap: 24px;
   border-radius: 16px;
+}
+
+@media (max-width: 1200px) {
+  .fact {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 24px;
+  }
 }
 
 .tag {
@@ -164,6 +168,17 @@ ul {
   background-image: none;
 }
 
+/* FORM */
+.fact-form {
+  background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 32px;
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  border-radius: 16px;
+}
+
 .fact-form input,
 .fact-form select {
   width: 220px;
@@ -188,4 +203,20 @@ ul {
   font-weight: 600;
   font-size: 18px;
   margin-right: 18px;
+}
+
+@media (max-width: 1000px) {
+  body {
+    padding: 32px 48px;
+  }
+
+  .fact-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .fact-form input,
+  .fact-form select {
+    width: auto;
+  }
 }
